--- a/files/LICENSE.html
+++ b/files/LICENSE.html
@@ -19,7 +19,7 @@
         </h1>
         <ul class="files">
             <li>LICENSE</li>
-            <li>Last modified: Fri Jul 02 10:25:20 +0200 2010</li>
+            <li>Last modified: Wed Jul 07 10:01:55 +0200 2010</li>
         </ul>
     </div>
 
@@ -28,7 +28,10 @@
     
     <div class="description">
         <p>
-Copyright &#169; 2009 LIM SAS
+Payme: Sogenactif API Ruby adapter
+</p>
+<p>
+Copyright &#169; 2010 LIM SAS
 </p>
 <p>
 Permission is hereby granted, free of charge, to any person obtaining a
@@ -51,6 +54,12 @@ NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
 DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
 OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE
 USE OR OTHER DEALINGS IN THE SOFTWARE.
+</p>
+<p>
+Sogenactif is an online payment service from the Société Générale bank
+(<a href="http://socgen.com">socgen.com</a> - <a
+href="http://sogenactif.com">sogenactif.com</a>). Sogenactif is based on an
+Atos-Worldline solution.
 </p>
 
     </div>
